test/fail/ifexpr43.v3
//@execute 0=0; 9=9; -9=-9
def main(a: int) -> int {
	return if(a < 0, id<int>, id)(a);
}
def id<T>(a: T) -> T {
	return a;
}
